# dead-letter-oracle

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  conftest.py  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
adr/: ADR-001-why-dead-letter-oracle.md  ADR-002-real-mcp-over-stdio.md  ADR-003-deterministic-tools-plus-llm-interpretation.md  ADR-004-gatekeeper-multi-factor-evaluation.md  ADR-005-blackbox-structured-reasoning-trace.md  ADR-006-demo-first-scope-constraints.md  ADR-007-demo-latency-and-caching.md  ADR-008-agentgateway-mcp-proxy.md  ADR-009-agent-http-api.md
agent/: api.py  llm.py  planner.py  runtime.py
agentgateway/: config.yaml
data/: sample_dlq.json
docs/: blog-post.md
governance/: gatekeeper.py
mcp_server/: __main__.py  models.py  server.py  tools.py
observability/: blackbox.py
tests/: test_agent.py  test_full_flow.py  test_integration.py  test_tools.py
